samples/_failures_safe/1761005846_366e63_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f1b63ec5.c: In function ‘main’:
./samples/SAFE/__tmp_f1b63ec5.c:137:25: error: missing terminating " character
  137 |         fprintf(stderr, "Failed to add block 3\n
      |                         ^~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_f1b63ec5.c:137:9: error: expected expression at end of input
  137 |         fprintf(stderr, "Failed to add block 3\n
      |         ^~~~~~~
./samples/SAFE/__tmp_f1b63ec5.c:137:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f1b63ec5.c:137:9: error: expected declaration or statement at end of input
